--- a/index.html
+++ b/index.html
@@ -56,14 +56,15 @@
         <p><small>This demonstration was created by <a href="http://discontents.com.au/about-me">Tim Sherratt</a> (<a href="http://twitter.com/wragge">@wragge</a>) to show how easy it is to create your own exhibition.</small></p>
       </div>
       <ul ng-hide="listHide" class="ng-hide" id="lists">
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=93766">Vanheems & Co. Photography</a></li>
         <!-- CHANGE THIS TO LIST THE TROVE LISTS THAT MAKE UP YOUR EXHIBITION -->
-        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=43805">A day in the life of Mr Mares, weatherman</a></li>
+        <!--<li><a class="list-link" href="http://trove.nla.gov.au/list?id=43805">A day in the life of Mr Mares, weatherman</a></li>
         <li><a class="list-link" href="http://trove.nla.gov.au/list?id=83777">Clement Wragge</a></li>
-        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=83774">Inigo Jones</a></li>
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=83774">Inigo Jones</a></li>-->
       </ul>
       <script>
         // ADD YOUR TROVE API KEY
-        var troveAPIKey = "";
+        var troveAPIKey = "hjk2biu9d921f8es";
         var config = {};
         config.listSnippet = 50;
         config.directLinks = true;
